Archive2/1d/34bd6fbc5ec816/output
main.cpp:57:53: error: expected expression
    std::cout << devices[0].getInfo<CL_DEVICE_NAME>() << std::endl;
                                                    ^
1 error generated.
